Update docker api client
