# src/Weaver.WebApp/packages/shared/src/api/models/problem-details-instance.ts
@@ -5,4 +5,4 @@
  * OpenAPI spec version: 1.0.0
  */
 
-export type ServiceType = number;
+export type ProblemDetailsInstance = null | string;
