# src/Weaver.WebApp/packages/shared/src/api/models/service-option-model-id.ts
@@ -5,4 +5,4 @@
  * OpenAPI spec version: 1.0.0
  */
 
-export type ServiceType = number;
+export type ServiceOptionModelId = null | string;
